--- a/app/src/main/res/layout/holder_main_list.xml
+++ b/app/src/main/res/layout/holder_main_list.xml
@@ -6,6 +6,7 @@
 	android:layout_height="wrap_content"
 	app:cardBackgroundColor="@color/black"
 	app:contentPadding="16dp"
+	android:layout_margin="8dp"
 	app:layout_constraintEnd_toEndOf="parent"
 	app:layout_constraintStart_toStartOf="parent"
 	app:layout_constraintTop_toTopOf="parent">
