--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -6,21 +6,143 @@
 	android:layout_height="match_parent"
 	tools:context=".MainActivity2">
 
-	<androidx.fragment.app.FragmentContainerView
-		android:id="@+id/main2_fragment_container"
-		android:layout_width="0dp"
-		android:layout_height="0dp"
-		app:layout_constraintBottom_toTopOf="@id/main2_btn_close"
-		app:layout_constraintEnd_toEndOf="parent"
-		app:layout_constraintStart_toStartOf="parent"
-		app:layout_constraintTop_toTopOf="parent"
-		tools:layout="@layout/fragment_blank" />
-
-	<Button
-		android:id="@+id/main2_btn_close"
-		android:layout_width="match_parent"
+	<androidx.constraintlayout.widget.Barrier
+		android:id="@+id/top_barrier"
+		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
-		android:text="Close"
-		app:layout_constraintBottom_toBottomOf="parent" />
+		app:barrierDirection="bottom"
+		app:constraint_referenced_ids="card_one,card_two,card_three" />
+
+	<com.google.android.material.card.MaterialCardView
+		android:id="@+id/card_one"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		app:cardBackgroundColor="@android:color/holo_red_light"
+		app:contentPadding="16dp"
+		app:layout_constraintEnd_toStartOf="@id/card_two"
+		app:layout_constraintHorizontal_chainStyle="spread"
+		app:layout_constraintStart_toStartOf="parent"
+		app:layout_constraintTop_toTopOf="parent">
+
+		<androidx.constraintlayout.widget.ConstraintLayout
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content">
+
+			<TextView
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:text="Vassilis"
+				app:layout_constraintBottom_toBottomOf="parent"
+				app:layout_constraintEnd_toEndOf="parent"
+				app:layout_constraintStart_toStartOf="parent"
+				app:layout_constraintTop_toTopOf="parent" />
+
+		</androidx.constraintlayout.widget.ConstraintLayout>
+
+	</com.google.android.material.card.MaterialCardView>
+
+	<com.google.android.material.card.MaterialCardView
+		android:id="@+id/card_two"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		app:cardBackgroundColor="@android:color/holo_green_light"
+		app:contentPadding="16dp"
+		app:layout_constraintEnd_toStartOf="@id/card_three"
+		app:layout_constraintStart_toEndOf="@id/card_one"
+		app:layout_constraintTop_toTopOf="@id/card_one">
+
+		<TextView
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:minLines="3"
+			android:text="Vassilis" />
+
+	</com.google.android.material.card.MaterialCardView>
+
+
+	<com.google.android.material.card.MaterialCardView
+		android:id="@+id/card_three"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		app:cardBackgroundColor="@android:color/holo_blue_light"
+		app:contentPadding="16dp"
+		app:layout_constraintEnd_toEndOf="parent"
+		app:layout_constraintStart_toEndOf="@id/card_two"
+		app:layout_constraintTop_toTopOf="@id/card_one">
+
+		<TextView
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:minLines="5"
+			android:text="Vassilis" />
+
+	</com.google.android.material.card.MaterialCardView>
+
+	<com.google.android.material.card.MaterialCardView
+		android:id="@+id/card_four"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:layout_marginTop="16dp"
+		app:cardBackgroundColor="@android:color/black"
+		app:contentPadding="16dp"
+		app:layout_constraintEnd_toStartOf="@id/guideline"
+		app:layout_constraintStart_toStartOf="parent"
+		app:layout_constraintTop_toBottomOf="@id/top_barrier">
+
+		<TextView
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:text="Vassilis" />
+
+	</com.google.android.material.card.MaterialCardView>
+
+	<com.google.android.material.card.MaterialCardView
+		android:id="@+id/card_five"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		app:cardBackgroundColor="@android:color/holo_red_dark"
+		app:contentPadding="16dp"
+		app:layout_constraintEnd_toEndOf="parent"
+		app:layout_constraintStart_toEndOf="@id/guideline"
+		app:layout_constraintTop_toTopOf="@id/card_four">
+
+		<TextView
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:text="Vassilis" />
+
+	</com.google.android.material.card.MaterialCardView>
+
+	<androidx.constraintlayout.widget.Group
+		android:id="@+id/group_views"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		app:constraint_referenced_ids="imageview,textView" />
+
+	<ImageView
+		android:id="@+id/imageview"
+		android:layout_width="80dp"
+		android:layout_height="80dp"
+		app:layout_constraintTop_toTopOf="parent"
+		app:layout_constraintBottom_toBottomOf="parent"
+		app:layout_constraintStart_toStartOf="parent"
+		app:layout_constraintEnd_toEndOf="parent"
+		android:src="@mipmap/ic_launcher" />
+
+	<TextView
+		android:id="@+id/textView"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:text="@string/app_name"
+		app:layout_constraintStart_toStartOf="@id/imageview"
+		app:layout_constraintEnd_toEndOf="@id/imageview"
+		app:layout_constraintTop_toBottomOf="@id/imageview" />
+
+	<androidx.constraintlayout.widget.Guideline
+		android:id="@+id/guideline"
+		android:layout_width="wrap_content"
+		app:layout_constraintGuide_percent="0.50"
+		android:orientation="vertical"
+		android:layout_height="wrap_content"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
