--- a/app/src/main/res/layout/fragment_main_recycler_view.xml
+++ b/app/src/main/res/layout/fragment_main_recycler_view.xml
@@ -1,14 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.recyclerview.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
+	xmlns:app="http://schemas.android.com/apk/res-auto"
 	xmlns:tools="http://schemas.android.com/tools"
+	android:id="@+id/main_recycler"
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
-	tools:context=".mvvm.MainRecyclerViewFragment">
-
-	<!-- TODO: Update blank fragment layout -->
-	<TextView
-		android:layout_width="match_parent"
-		android:layout_height="match_parent"
-		android:text="@string/hello_blank_fragment" />
-
-</FrameLayout>
+	android:orientation="vertical"
+	app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+	tools:listitem="@layout/holder_main_list"
+	tools:itemCount="5"
+	app:spanCount="3"
+	tools:context=".mvvm.MainRecyclerViewFragment" />
